--- a/admin/manager.html
+++ b/admin/manager.html
@@ -121,6 +121,15 @@
                         />
                     </div>
                     <div class="input-group">
+                        <label for="employee-cin">CIN:</label>
+                        <input
+                            type="text"
+                            id="employee-cin"
+                            name="employee-cin"
+                            required
+                        />
+                    </div>
+                    <div class="input-group">
                         <label for="employee-email">Email:</label>
                         <input
                             type="email"
@@ -173,6 +182,15 @@
                                 type="text"
                                 id="update-employee-position"
                                 name="employee-position"
+                                required
+                            />
+                        </div>
+                        <div class="input-group">
+                            <label for="update-employee-cin">CIN:</label>
+                            <input
+                                type="text"
+                                id="update-employee-cin"
+                                name="employee-cin"
                                 required
                             />
                         </div>
